logs/omnipy.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/certifi'...
Listing './lib/python3.5/site-packages/certifi-2017.11.5.dist-info'...
Listing './lib/python3.5/site-packages/chardet'...
Listing './lib/python3.5/site-packages/chardet/cli'...
Listing './lib/python3.5/site-packages/chardet-3.0.4.dist-info'...
Listing './lib/python3.5/site-packages/idna'...
Listing './lib/python3.5/site-packages/idna-2.6.dist-info'...
Listing './lib/python3.5/site-packages/omnipy'...
Listing './lib/python3.5/site-packages/omnipy/data'...
Listing './lib/python3.5/site-packages/omnipy/data/reader'...
Compiling './lib/python3.5/site-packages/omnipy/data/reader/dpi.py'...
***   File "./lib/python3.5/site-packages/omnipy/data/reader/dpi.py", line 139
    print appcat.protoName(0)
               ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/omnipy/data/reader/http.py'...
***   File "./lib/python3.5/site-packages/omnipy/data/reader/http.py", line 262
    print f
          ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/omnipy/data/reader/tcp.py'...
***   File "./lib/python3.5/site-packages/omnipy/data/reader/tcp.py", line 182
    print TCPLogEntry.all()
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/omnipy/model'...
Compiling './lib/python3.5/site-packages/omnipy/model/aem.py'...
***   File "./lib/python3.5/site-packages/omnipy/model/aem.py", line 323
    print _overlap(e1,e2)
                 ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/omnipy/utils'...
Compiling './lib/python3.5/site-packages/omnipy/utils/filetype.py'...
***   File "./lib/python3.5/site-packages/omnipy/utils/filetype.py", line 60
    print db
           ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/omnipy/utils/gzip_mod.py'...
***   File "./lib/python3.5/site-packages/omnipy/utils/gzip_mod.py", line 120
    raise IOError, "Mode " + mode + " not supported"
                 ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/omnipy/utils/stat.py'...
***   File "./lib/python3.5/site-packages/omnipy/utils/stat.py", line 35
    print FMeasure(0.5, 0.5)
                 ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/omnipy/utils/url.py'...
***   File "./lib/python3.5/site-packages/omnipy/utils/url.py", line 60
    print URL.strip_proto(url1)
            ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/omnipy-0.1.2.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/requests'...
Listing './lib/python3.5/site-packages/requests-2.18.4.dist-info'...
Listing './lib/python3.5/site-packages/requests_file-1.4.3.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/tldextract'...
Listing './lib/python3.5/site-packages/tldextract/tests'...
Listing './lib/python3.5/site-packages/tldextract-2.2.0.dist-info'...
Listing './lib/python3.5/site-packages/treelib'...
Listing './lib/python3.5/site-packages/treelib-1.5.1.egg-info'...
Listing './lib/python3.5/site-packages/urllib3'...
Listing './lib/python3.5/site-packages/urllib3/contrib'...
Listing './lib/python3.5/site-packages/urllib3/contrib/_securetransport'...
Listing './lib/python3.5/site-packages/urllib3/packages'...
Listing './lib/python3.5/site-packages/urllib3/packages/backports'...
Listing './lib/python3.5/site-packages/urllib3/packages/ssl_match_hostname'...
Listing './lib/python3.5/site-packages/urllib3/util'...
Listing './lib/python3.5/site-packages/urllib3-1.22.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
